kubernetes/cluster-services/participant-dependencies/templates/example2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo3
  namespace: demo
spec:
  selector:
    app.kubernetes.io/name: demo3
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
