kubernetes/cluster-services/participant-dependencies/templates/example2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo3
  namespace: demo
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: demo3.k8s.aws-tests.skyworkz.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo
            port:
              number: 8080
  tls:
  - hosts:
    - demo3.k8s.aws-tests.skyworkz.nl
    secretName: demo3-tls
